add morgan to debug

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     },
     "homepage": "https://github.com/ChiBienayme/nodejs-blog#readme",
     "dependencies": {
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "morgan": "^1.10.0"
     }
 }
-
