--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "src/index.js",
     "scripts": {
         "start": "nodemon --inspect ./src/index.js",
+        "watch": "sass --watch src/resources/scss/ --output src/public/css/",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -23,7 +24,11 @@
     "homepage": "https://github.com/ChiBienayme/nodejs-blog#readme",
     "dependencies": {
         "express": "^4.18.2",
-        "express-handlebars": "^7.0.7",
-        "morgan": "^1.10.0"
+        "express-handlebars": "^7.0.7"
+    },
+    "devDependencies": {
+        "morgan": "^1.10.0",
+        "sass": "^1.62.1"
     }
 }
+
