--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-#json
+# json
 .json
 
-#vscode
+# vscode
 .vscode
+
+# public
+src/public/css/app.css
