--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "src/index.js",
     "scripts": {
-        "start": "nodemon --inspect ./src/index.js",
+        "start": "nodemon --inspect src/index.js",
         "watch": "sass src/resources/scss/:src/public/css/ --watch",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
