--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "homepage": "https://github.com/ChiBienayme/nodejs-blog#readme",
     "dependencies": {
         "express": "^4.18.2",
-        "express-handlebars": "^7.0.7"
+        "express-handlebars": "^7.0.7",
+        "mongoose": "^7.1.1"
     },
     "devDependencies": {
         "morgan": "^1.10.0",
         "sass": "^1.62.1"
     }
 }
-
