--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
         "mongoose": "^6.10.0",
         "mongoose-delete": "^0.5.4",
         "mongoose-sequence": "^5.3.1",
-        "mongoose-slug-generator": "^1.0.4",
-        "mongoose-slug-updater": "^3.3.0"
+        "mongoose-slug-generator": "^1.0.4"
     },
     "devDependencies": {
         "morgan": "^1.10.0",
